--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "main": "server/index.js",
-  "proxy": "http://localhost:9000",
+  "proxy": {
+    "/auth/callback": {
+      "target": "http://localhost:9000"
+    },
+    "/api": {
+      "target": "http://localhost:9000"
+    }
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
